--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -27,50 +27,84 @@
     text-align: center;
 }
 
+
+/* Enlaces que aparecen cuando se hace scroll */
+
 /* Estilo del header cuando hace scroll */
 .header.scrolled {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    padding: 1rem 0;
+
     text-align: center;
-    font-size: 6rem;
+    font-size: 3rem;
     opacity: 0.9;
+    width: 100%;
 }
 
 /* Cambiar el fondo cuando el scroll supera los 150px */
 .header.fondo-cambiado {
-    background-color: rgba(175, 174, 174, 0.8); /* Cambia el color de fondo */
+    background-color: rgba(175, 174, 174, 0.8);
+    /* Cambia el color de fondo */
     width: 100%;
+    
+
+
 }
 
-/* Efecto del texto */
+
+/* Mantiene la animación del texto en todos los dispositivos */
 .banner-text {
     font-size: 11rem;
     transition: font-size 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
 }
 
-/* Cambiar el texto cuando el header se hace pequeño */
 .header.scrolled .banner-text {
-    font-size: 6rem;
+    font-size: 5rem;
     opacity: 0.8;
     transform: translateY(-5px);
 }
 
-/* Enlaces que aparecen cuando se hace scroll */
+/* Oculta los enlaces por defecto en móviles */
 .enlaces {
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-    font-size: 20px;
-    margin-left: 3rem;
+    display: none;
 }
 
-.enlaces.visible {
-    opacity: 1;
+/* Para pantallas más grandes, se activa la animación de los enlaces */
+@media (min-width: 768px) {
+    .enlaces {
+        display: flex;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        font-size: 20px;
+        margin-left: 3rem;
+        justify-content: center ;
+
+
+    }
+
+    .enlaces.visible {
+        opacity: 1;
+    }
+
+    .espacios {
+        margin-right: 3rem;
+        color: #ffffff;
+        text-decoration: none;
+    }
+
+    .menu-icon {
+        opacity: 0;
+    }
 }
 
-.espacios {
-    margin-right: 3rem;
-    color: #ffffff;
-    text-decoration: none;
+.menu-icon {
+
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
 }
